Add basic layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  background: #fff1f2;
-  color: #422006;
+  background: #fafafa;
+  color: #172554;
 }
 
 /* @media (prefers-color-scheme: dark) {
